objects/X9902Client__c.object
<CustomObject>
    <fields>
        <fullName>ClientIntakeLoanIsInterestOnly__c</fullName>
        <description>Indicates whether the client&apos;s intake loan is an interest-only loan.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s intake loan is an interest-only loan, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Intake Loan Is Interest Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientIntakeLoanIsaHybridARMLoan__c</fullName>
        <description>Indicates whether the client&apos;s intake loan is a Hybrid Adjustable Rate Mortgage (ARM).</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s intake loan is a Hybrid ARM, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Intake Loan Is a Hybrid ARM Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientIntakeLoanIsanOptionARMLoan__c</fullName>
        <description>Indicates whether the client&apos;s intake loan is an Option Adjustable Rate Mortgage (ARM).</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s intake loan is an Option ARM, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Intake Loan Is an Option ARM Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientIntakeLoanType__c</fullName>
        <description>The type of loan taken by the client during intake.</description>
        <inlineHelpText>Specify the type of loan taken by the client during intake (e.g., Mortgage, Personal loan, Auto loan).</inlineHelpText>
        <label>Client Intake Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Fixed rate currently under 8%</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Fixed rate currently 8% or greater</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>ARM currently under 8%</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>ARM currently at 8% or greater</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Fixed rate currently under 8% as a result of loan modification in last six months</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Fixed rate currently 8% or greater as a result of loan modification in last six months</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>ARM currently under 8% as a result of loan modification in last six months</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>ARM currently at 8% or greater as a result of loan modification in last six months</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client did not disclose</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientIntakeLoanisFHAOrVAInsured__c</fullName>
        <description>Indicates whether the client&apos;s intake loan is insured by the Federal Housing Administration (FHA) or the Department of Veterans Affairs (VA).</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s intake loan is insured by the FHA or VA, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Intake Loan is FHA Or VA Insured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientIntakeLoanisaPrivatelyHeld__c</fullName>
        <description>Indicates whether the client&apos;s intake loan is privately held.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s intake loan is privately held, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Intake Loan is a Privately Held</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientJobDuration__c</fullName>
        <description>The duration of the client&apos;s current job.</description>
        <inlineHelpText>Enter the duration of the client&apos;s current job, typically specified months.</inlineHelpText>
        <label>Client Job Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientLanguageSpoken__c</fullName>
        <description>The language spoken by the client.</description>
        <inlineHelpText>Enter the language spoken by the client.</inlineHelpText>
        <label>Client Language Spoken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Cambodian</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Cantonese</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Chinese Mandarin</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Hindi</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Swahili</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Turkish</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Vietnamese</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Farsi</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Ukrainian</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>ASL</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Hmong</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Creole</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Italian</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientLimitedEnglishProficiency__c</fullName>
        <description>Indicates whether the client has limited proficiency in English.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client has limited proficiency in English, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Limited English Proficiency </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientLoanBeingReported__c</fullName>
        <description>Indicates whether a loan associated with the client is being reported.</description>
        <inlineHelpText>Select Values are “F” for First, “S” for Second or “N” for N/A.</inlineHelpText>
        <label>Client Loan Being Reported</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientMaritalStatus__c</fullName>
        <description>The marital status of the client.</description>
        <inlineHelpText>Select the marital status of the client from the available options (e.g., Single, Married, Divorced, Widowed).</inlineHelpText>
        <label>Client Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Married</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Divorced</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Widowed</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Separated</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Choose not to respond</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientMissingCreditScoreReason__c</fullName>
        <description>The reason why the client&apos;s credit score is missing or unavailable.</description>
        <inlineHelpText>Enter the reason why the client&apos;s credit score is missing or unavailable if applicable. leghth of time in months</inlineHelpText>
        <label>Client Missing Credit Score Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Client refused to authorize credit report pull</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>NFMC Counseling Organization analyzed credit report that did not contain score</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>NFMC Counseling Organization does not analyze credit report for this level of service</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>NFMC Counseling Organization does not have relationship with credit reporting bureau</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Foreclosure expected within 14 days</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientMortgageClosingCost__c</fullName>
        <description>The closing costs associated with the client&apos;s mortgage.</description>
        <inlineHelpText>Enter the closing costs associated with the client&apos;s mortgage.</inlineHelpText>
        <label>Client Mortgage Closing Cost</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientMortgageDelinquency__c</fullName>
        <description>Indicates whether the client&apos;s mortgage payments are delinquent.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s mortgage payments are delinquent, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Mortgage Delinquency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientMortgageInterestRate__c</fullName>
        <description>The interest rate of the client&apos;s mortgage.</description>
        <inlineHelpText>Enter the interest rate of the client&apos;s mortgage.</inlineHelpText>
        <label>Client Mortgage Interest Rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientMortgageTypeAfter__c</fullName>
        <description>The type of mortgage held by the client after counseling.</description>
        <inlineHelpText>Specify the type of mortgage held by the client after counseling</inlineHelpText>
        <label>Client Mortgage Type After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>30 - year fixed</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>20 - year fixed</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>15 - year fixed</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>10 - year fixed</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>1 - year ARM</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>3 - year ARM</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>5 - year ARM</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>7 - year ARM</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - year ARM</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Interest Only</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>40 - year fixed</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>2 - year ARM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientMortgageType__c</fullName>
        <description>The type of mortgage held by the client.</description>
        <inlineHelpText>Specify the type of mortgage held by the client</inlineHelpText>
        <label>Client Mortgage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>30 - year fixed</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>20 - year fixed</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>15 - year fixed</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>10 - year fixed</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>1 - year ARM</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>3 - year ARM</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>5 - year ARM</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>7 - year ARM</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - year ARM</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Interest Only</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>40 - year fixed</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>2 - year ARM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientNewCity__c</fullName>
        <label>Client New City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNewState__c</fullName>
        <label>Client New State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>AK</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>AL</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>AR</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>AS</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>AZ</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>CO</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>CT</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>DC</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>DE</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>FL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>FM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>GA</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>GU</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>HI</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>IA</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>IL</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>KS</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>KY</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>LA</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>MA</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>ME</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>MH</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>MI</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>MN</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>MO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>MP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientNewZip__c</fullName>
        <label>Client New Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
</CustomObject>